--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 </head>
 <body>
     <h1>Hello World</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos a reiciendis neque 
+        sequi consectetur. Odio consequatur, ea omnis doloribus earum ab eligendi, 
+        suscipit necessitatibus sunt dolores magni neque, fuga autem!</p>
 </body>
 </html>
