--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hello World</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos a reiciendis neque 
-        sequi consectetur. Odio consequatur, ea omnis doloribus earum ab eligendi, 
+    <h1>Hello <br>World</h1>
+    <p>Lorem ipsum dolor sit amet consectetur <br>adipisicing elit. Eos a reiciendis neque 
+        sequi consectetur. Odio consequatur, <br>ea omnis doloribus earum ab eligendi, 
         suscipit necessitatibus sunt dolores magni neque, fuga autem!</p>
 </body>
 </html>
