Aggiunta metatag nome autore e descrizione

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <meta name="author" content="Nome dell'autore">
+    <meta name="description" content="Descrizione">
 </head>
 <body>
     <h1>Hello <br>World</h1>
