Aggiunta di un paragrafo con il link di google

--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <p>Lorem ipsum dolor sit amet consectetur <br>adipisicing elit. Eos a reiciendis neque 
         sequi consectetur. Odio consequatur, <br>ea omnis doloribus earum ab eligendi, 
         suscipit necessitatibus sunt dolores magni neque, fuga autem!</p>
+        <p> <a href="https://www.google.com" target="_blank">Link google</a> </p>
 </body>
 </html>
