--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
         sequi consectetur. Odio consequatur, <br>ea omnis doloribus earum ab eligendi, 
         suscipit necessitatibus sunt dolores magni neque, fuga autem!</p>
         <p> <a href="https://www.google.com" target="_blank">Link google</a> </p>
+        <img src="https://picsum.photos/200" alt="foto" width="200" height="200">
 </body>
 </html>
