--- a/index.html
+++ b/index.html
@@ -14,5 +14,40 @@
         suscipit necessitatibus sunt dolores magni neque, fuga autem!</p>
         <p> <a href="https://www.google.com" target="_blank">Link google</a> </p>
         <img src="https://picsum.photos/200" alt="foto" width="200" height="200">
+
+
+
+        <table>
+            <tr>
+                <th>Colonna 1</th>
+                <th>Colonna 2</th>
+                <th>Colonna 3</th>
+            </tr>
+            <tr>
+                <td>Riga 1, Colonna 1</td>
+                <td>Riga 1, Colonna 2</td>
+                <td>Riga 1, Colonna 3</td>
+            </tr>
+            <tr>
+                <td>Riga 2, Colonna 1</td>
+                <td>Riga 2, Colonna 2</td>
+                <td>Riga 2, Colonna 3</td>
+            </tr>
+            <tr>
+                <td>Riga 3, Colonna 1</td>
+                <td>Riga 3, Colonna 2</td>
+                <td>Riga 3, Colonna 3</td>
+            </tr>
+            <tr>
+                <td>Riga 4, Colonna 1</td>
+                <td>Riga 4, Colonna 2</td>
+                <td>Riga 4, Colonna 3</td>
+            </tr>
+            <tr>
+                <td>Riga 5, Colonna 1</td>
+                <td>Riga 5, Colonna 2</td>
+                <td>Riga 5, Colonna 3</td>
+            </tr>
+        </table>
 </body>
 </html>
