--- a/index.html
+++ b/index.html
@@ -18,36 +18,45 @@
 
 
         <table>
-            <tr>
-                <th>Colonna 1</th>
-                <th>Colonna 2</th>
-                <th>Colonna 3</th>
-            </tr>
-            <tr>
-                <td>Riga 1, Colonna 1</td>
-                <td>Riga 1, Colonna 2</td>
-                <td>Riga 1, Colonna 3</td>
-            </tr>
-            <tr>
-                <td>Riga 2, Colonna 1</td>
-                <td>Riga 2, Colonna 2</td>
-                <td>Riga 2, Colonna 3</td>
-            </tr>
-            <tr>
-                <td>Riga 3, Colonna 1</td>
-                <td>Riga 3, Colonna 2</td>
-                <td>Riga 3, Colonna 3</td>
-            </tr>
-            <tr>
-                <td>Riga 4, Colonna 1</td>
-                <td>Riga 4, Colonna 2</td>
-                <td>Riga 4, Colonna 3</td>
-            </tr>
-            <tr>
-                <td>Riga 5, Colonna 1</td>
-                <td>Riga 5, Colonna 2</td>
-                <td>Riga 5, Colonna 3</td>
-            </tr>
+            <thead>
+                <tr>
+                    <th>Colonna 1</th>
+                    <th>Colonna 2</th>
+                    <th>Colonna 3</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Riga 1, Colonna 1</td>
+                    <td>Riga 1, Colonna 2</td>
+                    <td>Riga 1, Colonna 3</td>
+                </tr>
+                <tr>
+                    <td>Riga 2, Colonna 1</td>
+                    <td>Riga 2, Colonna 2</td>
+                    <td>Riga 2, Colonna 3</td>
+                </tr>
+                <tr>
+                    <td>Riga 3, Colonna 1</td>
+                    <td>Riga 3, Colonna 2</td>
+                    <td>Riga 3, Colonna 3</td>
+                </tr>
+                <tr>
+                    <td>Riga 4, Colonna 1</td>
+                    <td>Riga 4, Colonna 2</td>
+                    <td>Riga 4, Colonna 3</td>
+                </tr>
+                <tr>
+                    <td>Riga 5, Colonna 1</td>
+                    <td>Riga 5, Colonna 2</td>
+                    <td>Riga 5, Colonna 3</td>
+                </tr>
+            </tbody>
+            <tfoot>
+                <tr>
+                    <td colspan="3">Footer della tabella</td>
+                </tr>
+            </tfoot>
         </table>
 </body>
 </html>
