Creazione div con paragrafi spen e due immagini affiancate

--- a/index.html
+++ b/index.html
@@ -15,7 +15,22 @@
         <p> <a href="https://www.google.com" target="_blank">Link google</a> </p>
         <img src="https://picsum.photos/200" alt="foto" width="200" height="200">
 
-
+        <div class="container">
+            <div>
+                <p>Questo è il primo paragrafo. <span>Questo è uno span all'interno del paragrafo.</span></p>
+            </div>
+            <div>
+                <p>Questo è il secondo paragrafo. <span>Un altro span all'interno del paragrafo.</span></p>
+            </div>
+            <div>
+                <p>Questo è il terzo paragrafo. <span>Ancora uno span qui dentro.</span></p>
+            </div>
+        </div>
+    
+        <div class="image-container">
+            <img src="https://picsum.photos/id/237/200/300" alt="Immagine 1"> 
+            <img src="https://picsum.photos/seed/picsum/200/300" alt="Immagine 2">
+        </div>
 
         <table>
             <thead>
