Pulizia e creazione aside main e footer

--- a/index.html
+++ b/index.html
@@ -8,70 +8,33 @@
     <meta name="description" content="Descrizione">
 </head>
 <body>
-    <h1>Hello <br>World</h1>
-    <p>Lorem ipsum dolor sit amet consectetur <br>adipisicing elit. Eos a reiciendis neque 
-        sequi consectetur. Odio consequatur, <br>ea omnis doloribus earum ab eligendi, 
-        suscipit necessitatibus sunt dolores magni neque, fuga autem!</p>
-        <p> <a href="https://www.google.com" target="_blank">Link google</a> </p>
-        <img src="https://picsum.photos/200" alt="foto" width="200" height="200">
-
-        <div class="container">
-            <div>
-                <p>Questo è il primo paragrafo. <span>Questo è uno span all'interno del paragrafo.</span></p>
-            </div>
-            <div>
-                <p>Questo è il secondo paragrafo. <span>Un altro span all'interno del paragrafo.</span></p>
-            </div>
-            <div>
-                <p>Questo è il terzo paragrafo. <span>Ancora uno span qui dentro.</span></p>
-            </div>
-        </div>
-    
-        <div class="image-container">
-            <img src="https://picsum.photos/id/237/200/300" alt="Immagine 1"> 
-            <img src="https://picsum.photos/seed/picsum/200/300" alt="Immagine 2">
-        </div>
-
-        <table>
-            <thead>
-                <tr>
-                    <th>Colonna 1</th>
-                    <th>Colonna 2</th>
-                    <th>Colonna 3</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>Riga 1, Colonna 1</td>
-                    <td>Riga 1, Colonna 2</td>
-                    <td>Riga 1, Colonna 3</td>
-                </tr>
-                <tr>
-                    <td>Riga 2, Colonna 1</td>
-                    <td>Riga 2, Colonna 2</td>
-                    <td>Riga 2, Colonna 3</td>
-                </tr>
-                <tr>
-                    <td>Riga 3, Colonna 1</td>
-                    <td>Riga 3, Colonna 2</td>
-                    <td>Riga 3, Colonna 3</td>
-                </tr>
-                <tr>
-                    <td>Riga 4, Colonna 1</td>
-                    <td>Riga 4, Colonna 2</td>
-                    <td>Riga 4, Colonna 3</td>
-                </tr>
-                <tr>
-                    <td>Riga 5, Colonna 1</td>
-                    <td>Riga 5, Colonna 2</td>
-                    <td>Riga 5, Colonna 3</td>
-                </tr>
-            </tbody>
-            <tfoot>
-                <tr>
-                    <td colspan="3">Footer della tabella</td>
-                </tr>
-            </tfoot>
-        </table>
+    <aside>
+        <nav>
+            <ul>
+                <li>Contatti</li>
+                <li>Chi siamo</li>
+                <li>Dove siamo</li>
+            </ul>
+        </nav>
+    </aside>
+    <main>
+        <section>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem nesciunt, deserunt saepe vitae asperiores 
+                blanditiis labore reiciendis velit officia quas? Ipsam, dolorum amet? Placeat veniam officiis ex iste. Voluptatibus, iste.
+            </p>
+        </section>
+        <section>
+            <p>Ciao sono mario</p>
+        </section>
+        <section>
+            <p>Sto facendo gli esercizi arretrati</p>
+        </section>
+    </main>
+    <footer>
+        <ul>
+            <li>Instagram</li>
+            <li>Facebook</li>
+        </ul>
+    </footer>
 </body>
 </html>
