--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem nesciunt, deserunt saepe vitae asperiores 
                 blanditiis labore reiciendis velit officia quas? Ipsam, dolorum amet? Placeat veniam officiis ex iste. Voluptatibus, iste.
             </p>
+            <video src="https://www.youtube.com/watch?v=JJpxEcAxuxQ">Video da youtube</video>
         </section>
         <section>
             <p>Ciao sono mario</p>
