Creazione svg stella

--- a/index.html
+++ b/index.html
@@ -22,10 +22,13 @@
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem nesciunt, deserunt saepe vitae asperiores 
                 blanditiis labore reiciendis velit officia quas? Ipsam, dolorum amet? Placeat veniam officiis ex iste. Voluptatibus, iste.
             </p>
-            <video src="https://www.youtube.com/watch?v=JJpxEcAxuxQ">Video da youtube</video>
+            <video src="https://www.youtube.com/watch?v=JJpxEcAxuxQ" >Video da youtube</video>
         </section>
         <section>
             <p>Ciao sono mario</p>
+            <svg width="100" height="100" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M12 2L14.09 8.26L21 9.27L16 14.14L17.45 21.02L12 17.77L6.55 21.02L8 14.14L3 9.27L9.91 8.26L12 2Z" fill="gold"/>
+            </svg>
         </section>
         <section>
             <p>Sto facendo gli esercizi arretrati</p>
