Correzione video youtube

--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorem nesciunt, deserunt saepe vitae asperiores 
                 blanditiis labore reiciendis velit officia quas? Ipsam, dolorum amet? Placeat veniam officiis ex iste. Voluptatibus, iste.
             </p>
-            <video src="https://www.youtube.com/watch?v=JJpxEcAxuxQ" >Video da youtube</video>
+            <div class="video-container">
+                
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/R3Hpxp9LGYY?si=8cOIhFGaYU3REzRR" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
         </section>
         <section>
             <p>Ciao sono mario</p>
