--- a/index.html
+++ b/index.html
@@ -35,6 +35,17 @@
         </section>
         <section>
             <p>Sto facendo gli esercizi arretrati</p>
+            <div class="image-container">
+                <picture>
+                    <source srcset="immagine1-small.jpg" media="(max-width: 600px)">
+                    <source srcset="immagine1-medium.jpg" media="(max-width: 1200px)">
+                    <img src="immagine1.jpg" alt="Immagine 1">
+                </picture>
+                <picture>
+                    <source srcset="immagine2-small.jpg" media="(max-width: 600px)">
+                    <source srcset="immagine2-medium.jpg" media="(max-width: 1200px)">
+                    <img src="immagine2.jpg" alt="Immagine 2">
+                </picture>
         </section>
     </main>
     <footer>
