--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
                     <source srcset="immagine2-medium.jpg" media="(max-width: 1200px)">
                     <img src="immagine2.jpg" alt="Immagine 2">
                 </picture>
+
+                <div>
+                    <label for="">Scrivi un messaggio</label>
+                <textarea name="textarea" id="textarea" cols="20" rows="10"></textarea>
+                </div>
         </section>
     </main>
     <footer>
