--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
                 </picture>
 
                 <div>
+                    <label for="nome">Nome</label>
+                    <input type="text">
                     <label for="">Scrivi un messaggio</label>
                 <textarea name="textarea" id="textarea" cols="20" rows="10"></textarea>
                 </div>
