Aggiunta immagine svg

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
                     <label for="">Scrivi un messaggio</label>
                 <textarea name="textarea" id="textarea" cols="20" rows="10"></textarea>
                 </div>
+                <img src="download.svg" alt="">
         </section>
     </main>
     <footer>
