Aggiunta radio generi, checkbox privacy e button

--- a/index.html
+++ b/index.html
@@ -54,6 +54,19 @@
                 <textarea name="textarea" id="textarea" cols="20" rows="10"></textarea>
                 </div>
                 <img src="download.svg" alt="">
+                <form id="form">
+                    <label for="gender">Inserisci il genere:
+                        <input type="radio" name="gender" value="male" >Male 
+                        <input type="radio" name="gender" value="female" >Female
+                    </label>
+                    <label for="privacy">
+                        <input type="checkbox"> Privacy
+                    </label>
+                    <button type="submit">Invia</button>
+
+                    
+                    
+                </form>
         </section>
     </main>
     <footer>
