--- a/index.html
+++ b/index.html
@@ -68,6 +68,44 @@
                     
                 </form>
         </section>
+        <section id="tabella">
+            <table>
+                <thead>
+                    <tr>
+                        <th>Colonna 1</th>
+                        <th>Colonna 2</th>
+                        <th>Colonna 3</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Riga 1, Col 1</td>
+                        <td>Riga 1, Col 2</td>
+                        <td>Riga 1, Col 3</td>
+                    </tr>
+                    <tr>
+                        <td>Riga 2, Col 1</td>
+                        <td>Riga 2, Col 2</td>
+                        <td>Riga 2, Col 3</td>
+                    </tr>
+                    <tr>
+                        <td>Riga 3, Col 1</td>
+                        <td>Riga 3, Col 2</td>
+                        <td>Riga 3, Col 3</td>
+                    </tr>
+                    <tr>
+                        <td>Riga 4, Col 1</td>
+                        <td>Riga 4, Col 2</td>
+                        <td>Riga 4, Col 3</td>
+                    </tr>
+                    <tr>
+                        <td>Riga 5, Col 1</td>
+                        <td>Riga 5, Col 2</td>
+                        <td>Riga 5, Col 3</td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
     </main>
     <footer>
         <ul>
