Aggiunta immagini una affianco all'altra piu span nel paragrafo

--- a/index.html
+++ b/index.html
@@ -106,6 +106,20 @@
                 </tbody>
             </table>
         </section>
+
+        <div>
+            <p>Ciao sono mario <span>e sto facendo gli esercizi errati</span></p>
+        </div>
+        <div>
+            <p>Ciao sono io</p>
+        </div>
+        <div>
+            <p>Ciao non so che dirti</p>
+        </div>
+        <div>
+            <img src="https://picsum.photos/id/237/200/300" alt="">
+            <img src="https://picsum.photos/seed/picsum/200/300" alt="">
+        </div>
     </main>
     <footer>
         <ul>
