--- a/index.html
+++ b/index.html
@@ -104,6 +104,13 @@
                         <td>Riga 5, Col 3</td>
                     </tr>
                 </tbody>
+                <tfoot>
+                    <tr>
+                        <td>Totale 1</td>
+                        <td>Totale 2</td>
+                        <td>Totale 3</td>
+                    </tr>
+                </tfoot>
             </table>
         </section>
 
