Inserimento id e name all'input

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
                 </picture>
 
                 <div>
-                    <label for="nome">Nome</label>
-                    <input type="text">
+                    <label for="nome" id="nome">Nome</label>
+                    <input type="text" name="nome">
                     <label for="">Scrivi un messaggio</label>
                 <textarea name="textarea" id="textarea" cols="20" rows="10"></textarea>
                 </div>
