--- a/index.html
+++ b/index.html
@@ -62,9 +62,11 @@
                         <input type="radio" name="gender" value="male" >Male 
                         <input type="radio" name="gender" value="female" >Female
                     </label>
-                    <label for="privacy" id="privacy" name="privacy">
-                        <input type="checkbox" name="checkbox"> Privacy
-                    </label>
+                    <div>
+                        <label for="privacy"  name="privacy">
+                         <input type="checkbox" name="checkbox" id="privacy"> Privacy
+                        </label>
+                    </div>
                     <button type="submit">Invia</button>     
             </form>
         </section>
