--- a/liste/liste.html
+++ b/liste/liste.html
@@ -30,5 +30,9 @@
             
         </dl>
     </div>
+    <div>
+        <img src="https://picsum.photos/200/300.jpg" alt="" width="500" height="300">
+        <img src="https://picsum.photos/200/300/?blur" alt="" width="100" height="600">
+    </div>
 </body>
 </html>
